--- a/style.css
+++ b/style.css
@@ -5,3 +5,50 @@ body{
     color: #603d7b;
     font-size: 18px;
 }
+
+.menu-content{
+    max-height: 0;
+    overflow: hidden;
+}
+
+.dropdown-menu{
+    background:#fff;
+    padding: 20px;
+    border-bottom: 2px solid #603d7b;
+    box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+}
+
+.dropdown-menu ul{
+    list-style-type: none;
+    padding: 0;
+}
+
+.dropdown-menu a{
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: #603d7b;
+}
+
+.dropdown-menu label{
+    display: block;
+    cursor: pointer;
+    background: url(images/closed.png) no-repeat left center;
+    background-size: 40px;
+    padding: 30px 0 30px 80px;
+}
+
+input#menu{
+    display: none;
+}
+
+/* Toggle effect */
+
+input:checked ~ label{
+    background: url(images/open.png) no-repeat left center;
+    background-size: 40px;
+}
+
+input:checked ~ .menu-content{
+    max-height: 100%;
+}
